--- a/packages/ui/src/components/combobox/ComboboxInput.astro
+++ b/packages/ui/src/components/combobox/ComboboxInput.astro
@@ -1,7 +1,12 @@
 ---
 import type { HTMLAttributes } from "astro/types";
 import { cn } from "@bejamas/ui/lib/utils";
-import { InputGroup, InputGroupInput, InputGroupAddon, InputGroupButton } from "../input-group";
+import {
+  InputGroup,
+  InputGroupInput,
+  InputGroupAddon,
+  InputGroupButton,
+} from "../input-group";
 import ChevronDownIcon from "@lucide/astro/icons/chevron-down";
 import XIcon from "@lucide/astro/icons/x";
 
@@ -23,7 +28,7 @@ const {
 } = Astro.props as Props;
 ---
 
-<InputGroup class={className}>
+<InputGroup class={cn("w-auto", className)}>
   <InputGroupInput
     data-slot="combobox-input"
     placeholder={placeholder}
@@ -31,34 +36,36 @@ const {
     autocomplete="off"
     {...rest}
   />
-  {(showTrigger || showClear) && (
-    <InputGroupAddon align="inline-end" class="pr-3">
-      {showClear && (
-        <InputGroupButton
-          data-slot="combobox-clear"
-          type="button"
-          size="icon-xs"
-          class="hidden [[data-value]_&]:inline-flex"
-          aria-label="Clear selection"
-        >
-          <XIcon class="size-3.5" />
-        </InputGroupButton>
-      )}
-      {showTrigger && (
-        <button
-          data-slot="combobox-trigger"
-          type="button"
-          tabindex={-1}
-          disabled={disabled}
-          class={cn(
-            "text-muted-foreground/80 hover:text-foreground flex items-center justify-center transition-colors",
-            showClear && "[[data-value]_&]:hidden",
-          )}
-          aria-label="Toggle menu"
-        >
-          <ChevronDownIcon class="size-4" />
-        </button>
-      )}
-    </InputGroupAddon>
-  )}
+  {
+    (showTrigger || showClear) && (
+      <InputGroupAddon align="inline-end" class="pr-3">
+        {showClear && (
+          <InputGroupButton
+            data-slot="combobox-clear"
+            type="button"
+            size="icon-xs"
+            class="hidden [[data-value]_&]:inline-flex"
+            aria-label="Clear selection"
+          >
+            <XIcon class="size-3.5" />
+          </InputGroupButton>
+        )}
+        {showTrigger && (
+          <button
+            data-slot="combobox-trigger"
+            type="button"
+            tabindex={-1}
+            disabled={disabled}
+            class={cn(
+              "text-muted-foreground/80 hover:text-foreground flex items-center justify-center transition-colors",
+              showClear && "[[data-value]_&]:hidden",
+            )}
+            aria-label="Toggle menu"
+          >
+            <ChevronDownIcon class="size-4" />
+          </button>
+        )}
+      </InputGroupAddon>
+    )
+  }
 </InputGroup>
