--- a/apps/web/src/pages/kitchen-sink/combobox.astro
+++ b/apps/web/src/pages/kitchen-sink/combobox.astro
@@ -1,5 +1,5 @@
 ---
-import BattlefieldLayout from "@/components/BattlefieldLayout.astro";
+import KitchenSinkLayout from "@/components/KitchenSinkLayout.astro";
 import EventLog from "@/components/EventLog.astro";
 import { Label } from "@bejamas/ui/components/label";
 import { Button } from "@bejamas/ui/components/button";
@@ -41,7 +41,7 @@ import SearchIcon from "@lucide/astro/icons/search";
 import ChevronDownIcon from "@lucide/astro/icons/chevron-down";
 ---
 
-<BattlefieldLayout>
+<KitchenSinkLayout>
   <section class="max-w-4xl mx-auto py-20 px-5 space-y-12">
     <h1 class="text-3xl font-bold mb-10">Combobox Component Test</h1>
 
@@ -910,4 +910,4 @@ import ChevronDownIcon from "@lucide/astro/icons/chevron-down";
       </script>
     </div>
   </section>
-</BattlefieldLayout>
+</KitchenSinkLayout>
