--- a/apps/web/src/pages/kitchen-sink/dropdown-menu.astro
+++ b/apps/web/src/pages/kitchen-sink/dropdown-menu.astro
@@ -1,5 +1,5 @@
 ---
-import BattlefieldLayout from "@/components/BattlefieldLayout.astro";
+import KitchenSinkLayout from "@/components/KitchenSinkLayout.astro";
 import EventLog from "@/components/EventLog.astro";
 import { Button } from "@bejamas/ui/components/button";
 import {
@@ -34,7 +34,7 @@ import CircleUserIcon from "@lucide/astro/icons/circle-user";
 import ChevronDownIcon from "@lucide/astro/icons/chevron-down";
 ---
 
-<BattlefieldLayout>
+<KitchenSinkLayout>
   <section class="max-w-4xl mx-auto py-20 px-5 space-y-12">
     <h1 class="text-3xl font-bold mb-10">Dropdown Menu Component Test</h1>
 
@@ -504,4 +504,4 @@ import ChevronDownIcon from "@lucide/astro/icons/chevron-down";
       </Dialog>
     </div>
   </section>
-</BattlefieldLayout>
+</KitchenSinkLayout>
