--- a/apps/web/src/pages/kitchen-sink/navigation-menu.astro
+++ b/apps/web/src/pages/kitchen-sink/navigation-menu.astro
@@ -1,5 +1,5 @@
 ---
-import BattlefieldLayout from "@/components/BattlefieldLayout.astro";
+import KitchenSinkLayout from "@/components/KitchenSinkLayout.astro";
 import EventLog from "@/components/EventLog.astro";
 import {
   NavigationMenu,
@@ -21,7 +21,7 @@ import NewspaperIcon from "@lucide/astro/icons/newspaper";
 import RocketIcon from "@lucide/astro/icons/rocket";
 ---
 
-<BattlefieldLayout>
+<KitchenSinkLayout>
   <section class="max-w-4xl mx-auto py-20 px-5 space-y-12">
     <h1 class="text-3xl font-bold mb-10">Navigation Menu Component Test</h1>
 
@@ -938,4 +938,4 @@ import RocketIcon from "@lucide/astro/icons/rocket";
       </script>
     </div>
   </section>
-</BattlefieldLayout>
+</KitchenSinkLayout>
